[project]
name = "face-align"
version = "0.1.0"
description = "A Python-based tool for automatically detecting and aligning faces in images using facial landmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=20.0.0",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]
